--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wdio ./test/wdio.conf.js",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,17 @@
     "@types/webdriverio": "^4.8.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.8",
+    "@types/mocha": "^2.2.44",
+    "chai": "^4.1.2",
+    "express": "^4.16.2",
     "ts-node": "^3.3.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "wdio-mocha-framework": "^0.5.11",
+    "wdio-mochawesome-reporter": "^1.1.0",
+    "wdio-phantomjs-service": "^0.2.2",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "wdio-spec-reporter": "^0.1.3",
+    "webdriverio": "^4.9.11"
   }
 }
