--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
         ],
         "types": [
             "node",
-            "webdriverio"
+            "webdriverio",
+            "mocha",
+            "chai"
         ]
     },
     "exclude": [
