--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "wdio-page-objects",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Simple page object pattern realization for WebdriverIO",
+  "keywords": [
+    "e2e",
+    "webdriverio",
+    "wdio",
+    "wdio-plugin",
+    "page objects",
+    "typescript",
+    "decorators"
+  ],
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
