--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wdio-page-objects",
-  "version": "0.1.5",
+  "version": "5.4.0",
   "description": "Simple page object pattern realization for WebdriverIO",
   "keywords": [
     "e2e",
@@ -14,10 +14,11 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "npx nyc wdio ./test/wdio.conf.js",
+    "test": "nyc wdio ./test/wdio.conf.js",
     "coveralls": "npx cat ./coverage/lcov.info | npx coveralls",
     "build": "npm run clean & npx tsc",
-    "clean": "npx rimraf lib & npx rimraf coverage & npx rimraf .nyc_output"
+    "clean": "npx rimraf lib & npx rimraf coverage & npx rimraf .nyc_output",
+    "debug": "wdio ./test/wdio.conf.js"
   },
   "nyc": {
     "extension": [
@@ -48,24 +49,26 @@
   },
   "homepage": "https://github.com/Aracturat/wdio-page-objects#readme",
   "dependencies": {
-    "@types/webdriverio": "^4.10.1",
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/mocha": "^5.0.0",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
-    "express": "^4.16.3",
-    "nyc": "^11.6.0",
-    "rimraf": "^2.6.2",
-    "ts-node": "^5.0.1",
-    "source-map-support": "^0.5.4",
-    "typescript": "^2.7.2",
-    "wdio-mocha-framework": "^0.5.13",
-    "wdio-phantomjs-service": "^0.2.2",
-    "wdio-selenium-standalone-service": "^0.0.10",
-    "wdio-spec-reporter": "^0.1.4",
-    "webdriverio": "^4.12.0"
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.19",
+    "@wdio/cli": "^5.4.8",
+    "@wdio/local-runner": "^5.4.8",
+    "@wdio/mocha-framework": "^5.4.8",
+    "@wdio/selenium-standalone-service": "^5.2.2",
+    "@wdio/spec-reporter": "^5.4.3",
+    "@wdio/sync": "^5.4.6",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
+    "express": "^4.16.4",
+    "nyc": "^13.1.0",
+    "rimraf": "^2.6.3",
+    "source-map-support": "^0.5.10",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.2.4",
+    "webdriverio": "^5.4.8"
   }
 }
